updated social link url and flexbox issue on ie

--- a/src/css/gigya.less
+++ b/src/css/gigya.less
@@ -1,3 +1,6 @@
+#exit{
+  cursor:pointer;
+}
 .hidden{
 	display:none;
 }
